Binary classification Using Transfer Learning with Feature Extraction

--- a/cat_Dog_classification_Feature_extraction.ipynb
+++ b/cat_Dog_classification_Feature_extraction.ipynb
@@ -329,41 +329,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 235
         },
         "id": "XBekHfym4Urf",
-        "outputId": "fefc42b9-5b82-4512-e2a2-0288ca213672"
+        "outputId": "3662feef-e5c7-4c82-8241-bb677f5a251d"
       },
       "outputs": [
         {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Found 20000 images belonging to 2 classes.\n",
-            "Found 5000 images belonging to 2 classes.\n"
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'ImageDataGenerator' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-305f6b1a05f1>\u001b[0m in \u001b[0;36m<cell line: 20>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0mbatch_size\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m32\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m train_datagen = ImageDataGenerator(\n\u001b[0m\u001b[1;32m     21\u001b[0m       \u001b[0mrescale\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1.\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m255\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m       \u001b[0mshear_range\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'ImageDataGenerator' is not defined"
           ]
         }
       ],
       "source": [
-        "# #generators\n",
-        "# train_ds = keras.utils.image_dataset_from_directory(\n",
-        "#     directory = '/content/train',\n",
-        "#     labels = 'inferred',\n",
-        "#     label_mode = 'int',\n",
-        "#     batch_size = 32,\n",
-        "#     image_size = (150, 150)\n",
-        "# )\n",
-        "\n",
-        "# validation_ds = keras.utils.image_dataset_from_directory(\n",
-        "#     directory = '/content/test',\n",
-        "#     labels = 'inferred',\n",
-        "#     label_mode = 'int',\n",
-        "#     batch_size = 32,\n",
-        "#     image_size = (150, 150)\n",
-        "# )\n",
         "#applying Data Augumentation\n",
         "batch_size = 32\n",
         "\n",
@@ -515,11 +503,11 @@
         "model = load_model('/content/dogs_vs_cats_model.keras')\n",
         "\n",
         "# Load and preprocess the image\n",
-        "img_path = '/content/Dog.jpeg'  # Replace with your image path\n",
-        "img = load_img(img_path, target_size=(150, 150))  # Resize image to match model input\n",
+        "img_path = '/content/Dog.jpeg'\n",
+        "img = load_img(img_path, target_size=(150, 150))\n",
         "img_array = img_to_array(img)\n",
-        "img_array = np.expand_dims(img_array, axis=0)  # Shape (1, 150, 150, 3)\n",
-        "img_array = img_array / 255.0  # Normalize\n",
+        "img_array = np.expand_dims(img_array, axis=0)\n",
+        "img_array = img_array / 255.0\n",
         "\n",
         "# Predict the class\n",
         "prediction = model.predict(img_array)\n",
@@ -538,7 +526,7 @@
       "gpuType": "V28",
       "provenance": [],
       "mount_file_id": "1wRrvck2svNsDg5w3-DHr8U7eM_aOFW6u",
-      "authorship_tag": "ABX9TyPFXb/Vb//TFAxBoGoqgA1X",
+      "authorship_tag": "ABX9TyNFznfc+wJ2JIiebtO2M+e1",
       "include_colab_link": true
     },
     "kernelspec": {
